# Secure_App

./: AUTHENTICATION_TESTING_GUIDE.md  App.tsx  DATABASE_SCHEMA_IMPLEMENTATION.md  DEVELOPMENT_PROGRESS.md  IMPLEMENTATION_STATUS.md  NEXT_STEPS.md  NOTIFICATION_SYSTEM_ENHANCEMENT.md  README.md  SERVER_STATUS.md  SETUP_STATUS.md  backend-architecture-plan.md  constants.ts  index.html  metadata.json  package-lock.json  package.json  types.ts  vite.config.ts
backend/: .env.example  .gitignore  Dockerfile  IMPLEMENTATION_PROGRESS.md  QUICKSTART.md  README.md  SECURITY_IMPLEMENTATION_SUMMARY.md  SECURITY_REMEDIATION_PLAN.md  SECURITY_REVIEW.md  alembic.ini  create_tables.py  create_tables_sql.py  docker-compose.yml  migration.sql  pyproject.toml  repomix-output.xml  run.sh  test_bcrypt_direct.py  test_login.py  test_server.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  20251115_1440_e02dd2c97f0e_add_encryption_support_to_secrets.py  20251115_1440_f77ff6b255a7_add_encryption_support_to_secrets.py
backend/app/: __init__.py  celeryconfig.py  config.py  main.py  tasks.py
backend/app/api/v1/: audit.py  auth.py  chat.py  documents.py  llm.py  notifications.py  tools.py  vault.py
backend/app/core/: cache.py  crypto.py  deps.py  exceptions.py  logging.py  security.py  validation.py
backend/app/db/: base.py
backend/app/middleware/: __init__.py  rate_limit.py  security_headers.py
backend/app/models/: __init__.py  audit.py  chat.py  document.py  notification.py  secret.py  tool.py  user.py
backend/app/schemas/: audit.py  auth.py  chat.py  document.py  notification.py  secret.py  tool.py
backend/app/services/: chunking_service.py  context_manager.py  document_processor.py  embedding_service.py  llm_service.py  notification_service.py  tool_executor.py
backend/scripts/: create_tables_direct.py  create_test_user.py  run_migrations.sh  seed_data.py  setup_database.sh  update_test_user_email.py  validate_setup.py
backend/tests/: conftest.py
backend/tests/integration/: test_cache.py
backend/tests/unit/: test_security.py
components/: ApprovalView.tsx  AuditView.tsx  ChatMessage.tsx  ChatView.tsx  DocumentView.tsx  LLMGatewayView.tsx  LoginView.tsx  SecureVaultView.tsx  Sidebar.tsx  ToolRegistryView.tsx  icons.tsx
services/: authService.ts  demoAgentService.ts  liveAgentService.ts
